add/edit-topic-start

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-MONGOBD_URI=mongodb+srv://avan:feFqKf9JsGrq1Xcy@cluster0.4a98h.mongodb.net/
+MONGOBD_URI="mongodb+srv://avan:EqUlaQcLWyCiTabJ@cluster0.4a98h.mongodb.net/"
 
 
 
 JeoOaOUFcbG7Rwzm
+EqUlaQcLWyCiTabJ
+
 
 feFqKf9JsGrq1XCY
 
